--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 		<input type="text" name="" placeholder="Name">
 		<input type="email" name="" placeholder="E-mail">
         <input type="text" name="" placeholder="Message" class="mess">
-		<a href="#"><input type="Submit" value="Login"></a>
+		<a href="#"><input type="Submit" value="Send"></a>
 	</form>
     </section>
 
